# src/main/java/io/renren/modules/data/entity/HPOperateDataEntity.java
@@ -1,0 +1,13 @@
+package io.renren.modules.data.entity;
+
+
+import lombok.Data;
+
+@Data
+public class HPOperateDataEntity {
+
+    private String operationTime;
+    private String dailyActivity;
+    private String serviceProNum;
+
+}
